header and footer of the page

--- a/home.html
+++ b/home.html
@@ -43,7 +43,19 @@
         <img src="image/icon.jpg" alt="picture of perfume">
         </div>
     </section>
-    <footer></footer>
     </div>
+    <footer>
+       <h3>✨ Lala Perfume ✨</h3>
+  <p>Let your scent tell your story 💖</p>
+       <div class="social-icons">
+    <a href="#">📸</a>
+    <a href="#">👍</a>
+    <a href="#">🎶</a>
+    <a href="#">💬</a>
+  </div>
+
+  <p>📞 0994261382 | 0972932710</p>
+  <p>© 2025 Lala Perfume. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
