--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css/about.css">
 </head>
 <body>
+    <h2 style="text-align: center;">LALA PERFUME</h2>
     <header>
         <!--creating navigation bar-->
         <div class="nav">
