--- a/product.html
+++ b/product.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>L</title>
+    <title>lala perfume</title>
+    <link rel="stylesheet" href="style.css/product.css">
 </head>
 <body>
-    
+    <h2 style="text-align: center;">LALA PERFUME</h2>
+    <header>
+        
+       <div>
+        <!--creating navigation bar-->
+        <div class="nav">
+            <ul>
+           <li> <a href="Home.html">HOME</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li> <a href="product.html">PRODUCT</a></li>
+            </ul>
+            </div>
+       </div> 
+    </header>
+    <section></section>
+    <footer></footer>
 </body>
 </html>
