footer od the page

--- a/product.html
+++ b/product.html
@@ -14,14 +14,26 @@
         <!--creating navigation bar-->
         <div class="nav">
             <ul>
-           <li> <a href="Home.html">HOME</a></li>
+            <li> <a href="Home.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
-            <li> <a href="product.html">PRODUCT</a></li>
+            <li> <a href="contact.html">CONTACT</a></li>
             </ul>
             </div>
        </div> 
     </header>
     <section></section>
-    <footer></footer>
+    <footer>
+        <h3>✨ Lala Perfume ✨</h3>
+  <p>Let your scent tell your story 💖</p>
+       <div class="social-icons">
+    <a href="#">📸</a>
+    <a href="#">👍</a>
+    <a href="#">🎶</a>
+    <a href="#">💬</a>
+  </div>
+
+  <p>📞 0994261382 | 0972932710</p>
+  <p>© 2025 Lala Perfume. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
