--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,18 @@
        </div> 
     </header>
     <section></section>
-    <footer></footer>
+    <footer>
+         <h3>✨ Lala Perfume ✨</h3>
+  <p>Let your scent tell your story 💖</p>
+       <div class="social-icons">
+    <a href="#">📸</a>
+    <a href="#">👍</a>
+    <a href="#">🎶</a>
+    <a href="#">💬</a>
+  </div>
+
+  <p>📞 0994261382 | 0972932710</p>
+  <p>© 2025 Lala Perfume. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
