--- a/product.html
+++ b/product.html
@@ -21,7 +21,21 @@
             </div>
        </div> 
     </header>
-    <section></section>
+    <section>
+        <h3>DIOR</h3>
+        <div class="pic">
+            <img src="image/pic 1.jpg" alt="picture">
+            <img src="image/pic2.jpg" alt="picture">
+            <img src="image/pic3.jpg" alt="picture">
+            <img src="image/pic4.jpg" alt="picture">
+        </div>
+     <h3>GUCCI</h3>
+     <div class="pic">
+     <img src="pic 5" alt="">
+     <img src="" alt="">
+     <img src="" alt="">
+     </div>
+    </section>
     <footer>
         <h3>✨ Lala Perfume ✨</h3>
   <p>Let your scent tell your story 💖</p>
