--- a/product.html
+++ b/product.html
@@ -24,19 +24,89 @@
     <section>
         <h3>DIOR</h3>
         <div class="pic">
+            <div class="dis">
             <img src="image/pic 1.jpg" alt="picture">
+            <p>Floral  </p>
+            <p>15,000 ETB</p>
+            <button style="width:80px; background-color:burlywood; border:none;">ADD CRAFT</button>
+
+            </div>
+            <div class="dis">
             <img src="image/pic2.jpg" alt="picture">
-            <img src="image/pic3.jpg" alt="picture">
-            <img src="image/pic4.jpg" alt="picture">
+            <p>Woody</p>
+            <p>12,000 ETB</p>
+            <button style="width:80px; background-color:burlywood; border:none;">ADD CRAFT</button>
+            </div>
+            <div class="dis">
+            <img style="height:150px;" src="image/pic3.jpg" alt="picture">
+            <p>long-lasting.</p>
+            <p>15,700 ETB</p>
+            <button style="width:80px; background-color:burlywood; border:none;">ADD CRAFT</button>
+            </div>
+            <div class="dis">
+            <img style="height:150px;" src="image/pic 4.jpg" alt="picture">
+             <p>fresh</p>
+            <p>17,700 ETB</p>
+            <button style="width:80px; background-color:burlywood; border:none;">ADD CRAFT</button>
+            </div>
+        
         </div>
      <h3>GUCCI</h3>
      <div class="pic">
-     <img src="pic 5" alt="">
-     <img src="" alt="">
-     <img src="" alt="">
+        <div class="dis">
+     <img src="image/pic5.jpg" alt="picture">
+      <p>Fruity</p>
+     <p>15,700 ETB</p>
+        <button style="width:80px; background-color:burlywood; border:none;">ADD CRAFT</button>
+     </div>
+     <div class="dis">
+     <img src="image/pic6.jpg" alt="picture">
+      <p>Amber</p>
+            <p>18,900 ETB</p>
+            <button style="width:80px; background-color:burlywood; border:none;">ADD CRAFT</button>
+     </div>
+     <div class="dis">
+     <img style="height:150px;" src="image/pic7.jpg" alt="picture">
+      <p>Flora</p>
+            <p>13,800 ETB</p>
+            <button style="width:80px; background-color:burlywood; border:none;">ADD CRAFT</button>
+     </div>
+     <div class="dis">
+     <img src="image/pic 9.jpg" alt="picture">
+      <p>Earthy</p>
+            <p>25,700 ETB</p>
+            <button style="width:80px; background-color:burlywood; border:none;">ADD CRAFT</button>
+     </div>
+     </div>
+     <h3>BLUE CHANNEL</h3>
+     <div class="pic">
+        <div class="dis">
+        <img style="height:180px;" src="image/pic 8.jpg" alt="picture">
+         <p>Gourmand</p>
+            <p>19,00 ETB</p>
+            <button style="width:80px; background-color:burlywood; border:none;">ADD CRAFT</button>
+            </div>
+            <div class="dis">
+        <img src="image/pic 10.jpg" alt="picture">
+         <p>Vanilla</p>
+            <p>16,200 ETB</p>
+            <button style="width:80px; background-color:burlywood; border:none;">ADD CRAFT</button>
+            </div>
+            <div class="dis">
+        <img src="image/pic 12.jpg" alt="picture">
+         <p>caramel</p>
+            <p>25,700 ETB</p>
+            <button style="width:80px; background-color:burlywood; border:none;">ADD CRAFT</button>
+            </div>
+            <div class="dis">
+        <img style="height:180px;" src="image/pic 13.jpg" alt="picture">
+         <p>coffee rush</p>
+            <p>15,700 ETB</p>
+            <button style="width:80px; background-color:burlywood; border:none;">ADD CRAFT</button>
+            </div>
      </div>
     </section>
-    <footer>
+    <footer>e
         <h3>✨ Lala Perfume ✨</h3>
   <p>Let your scent tell your story 💖</p>
        <div class="social-icons">
