--- a/product.html
+++ b/product.html
@@ -28,26 +28,26 @@
             <img src="image/pic 1.jpg" alt="picture">
             <p>Floral  </p>
             <p>15,000 ETB</p>
-            <button style="width:80px; background-color:burlywood; border:none;">ADD CRAFT</button>
+            <button style="width:80px; background-color:rgb(214, 147, 60); border:none;">ADD CRAFT</button>
 
             </div>
             <div class="dis">
             <img src="image/pic2.jpg" alt="picture">
             <p>Woody</p>
             <p>12,000 ETB</p>
-            <button style="width:80px; background-color:burlywood; border:none;">ADD CRAFT</button>
+            <button style="width:80px; background-color:rgb(214, 147, 60); border:none;">ADD CRAFT</button>
             </div>
             <div class="dis">
             <img style="height:150px;" src="image/pic3.jpg" alt="picture">
             <p>long-lasting.</p>
             <p>15,700 ETB</p>
-            <button style="width:80px; background-color:burlywood; border:none;">ADD CRAFT</button>
+            <button style="width:80px; background-color:rgb(214, 147, 60); border:none;">ADD CRAFT</button>
             </div>
             <div class="dis">
             <img style="height:150px;" src="image/pic 4.jpg" alt="picture">
              <p>fresh</p>
             <p>17,700 ETB</p>
-            <button style="width:80px; background-color:burlywood; border:none;">ADD CRAFT</button>
+            <button style="width:80px; background-color:rgb(214, 147, 60); border:none;">ADD CRAFT</button>
             </div>
         
         </div>
@@ -57,25 +57,25 @@
      <img src="image/pic5.jpg" alt="picture">
       <p>Fruity</p>
      <p>15,700 ETB</p>
-        <button style="width:80px; background-color:burlywood; border:none;">ADD CRAFT</button>
+        <button style="width:80px; background-color:rgb(214, 147, 60); border:none;">ADD CRAFT</button>
      </div>
      <div class="dis">
      <img src="image/pic6.jpg" alt="picture">
       <p>Amber</p>
             <p>18,900 ETB</p>
-            <button style="width:80px; background-color:burlywood; border:none;">ADD CRAFT</button>
+            <button style="width:80px; background-color:rgb(214, 147, 60); border:none;">ADD CRAFT</button>
      </div>
      <div class="dis">
      <img style="height:150px;" src="image/pic7.jpg" alt="picture">
       <p>Flora</p>
             <p>13,800 ETB</p>
-            <button style="width:80px; background-color:burlywood; border:none;">ADD CRAFT</button>
+            <button style="width:80px; background-color:rgb(214, 147, 60); border:none;">ADD CRAFT</button>
      </div>
      <div class="dis">
      <img src="image/pic 9.jpg" alt="picture">
       <p>Earthy</p>
             <p>25,700 ETB</p>
-            <button style="width:80px; background-color:burlywood; border:none;">ADD CRAFT</button>
+            <button style="width:80px; background-color:rgb(214, 147, 60); border:none;">ADD CRAFT</button>
      </div>
      </div>
      <h3>BLUE CHANNEL</h3>
@@ -84,25 +84,25 @@
         <img style="height:180px;" src="image/pic 8.jpg" alt="picture">
          <p>Gourmand</p>
             <p>19,00 ETB</p>
-            <button style="width:80px; background-color:burlywood; border:none;">ADD CRAFT</button>
+            <button style="width:80px; background-color:rgb(214, 147, 60); border:none;">ADD CRAFT</button>
             </div>
             <div class="dis">
         <img src="image/pic 10.jpg" alt="picture">
          <p>Vanilla</p>
             <p>16,200 ETB</p>
-            <button style="width:80px; background-color:burlywood; border:none;">ADD CRAFT</button>
+            <button style="width:80px; background-color:rgb(214, 147, 60); border:none;">ADD CRAFT</button>
             </div>
             <div class="dis">
         <img src="image/pic 12.jpg" alt="picture">
          <p>caramel</p>
             <p>25,700 ETB</p>
-            <button style="width:80px; background-color:burlywood; border:none;">ADD CRAFT</button>
+            <button style="width:80px; background-color:rgb(214, 147, 60); border:none;">ADD CRAFT</button>
             </div>
             <div class="dis">
         <img style="height:180px;" src="image/pic 13.jpg" alt="picture">
          <p>coffee rush</p>
             <p>15,700 ETB</p>
-            <button style="width:80px; background-color:burlywood; border:none;">ADD CRAFT</button>
+            <button style="width:80px; background-color:rgb(214, 147, 60); border:none;">ADD CRAFT</button>
             </div>
      </div>
     </section>
