--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,35 @@
             </div>
        </div> 
     </header>
-    <section></section>
+    <section>
+      <h2>Get in Touch</h2>
+        <div class="contact">
+            <div class="lable">
+                <div class="submit">
+        <lable for="Full Name">Full Name:</lable>
+            <input type="text" id="Full Name" name="Full Name" placeholder="Enter you full name"><br>
+        <lable for="Email">Email:</lable>
+             <input type="text" id="email" name="email" placeholder="Enter your email"><br>
+        <lable for="phone number">phone number:</lable>
+            <input type="number" id="phone number" name="phone number" placeholder="Enter your phone number "><br>
+        <lable for="Address">Address:</lable>
+            <input type="text" id="Address" name="Address" placeholder="Enter your current address"><br>
+        </div>
+        <p >Which car catches your interest?</p>
+        <form >
+           <label><input type="checkbox" name="feature" value="Mercedess-Benz">Dior</label><br>
+            <label><input type="checkbox" name="feature" value="BMW"> Gucci</label><br>
+            <label><input type="checkbox" name="feature" value="AUDI"> Blue Channel </label><br>
+            <label><input type="checkbox" name="feature" value="TESLA"> TESLA</label><br>  
+        </form>
+        
+        </div>
+        <div class="button">
+            <label><input type="submit" name="feature" value="Submit"> </label><br>  
+        </div>
+        </div>
+          
+    </section>
     <footer>
          <h3>✨ Lala Perfume ✨</h3>
   <p>Let your scent tell your story 💖</p>
