activate the button

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
        </div> 
     </header>
     <section>
-      <h2>Get in Touch</h2>
+      <h2>ORDER WHAT YOU LIKE</h2>
         <div class="contact">
             <div class="lable">
                 <div class="submit">
@@ -35,12 +35,11 @@
         <lable for="Address">Address:</lable>
             <input type="text" id="Address" name="Address" placeholder="Enter your current address"><br>
         </div>
-        <p >Which car catches your interest?</p>
+        <p >Which perfume catches your interest?</p>
         <form >
            <label><input type="checkbox" name="feature" value="Mercedess-Benz">Dior</label><br>
             <label><input type="checkbox" name="feature" value="BMW"> Gucci</label><br>
             <label><input type="checkbox" name="feature" value="AUDI"> Blue Channel </label><br>
-            <label><input type="checkbox" name="feature" value="TESLA"> TESLA</label><br>  
         </form>
         
         </div>
