--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
                 
             <h1>LALA PERFUME</h1>
             <h3>The Art of Scent, the Magic of You</h3>
-            <button>SHOP NOW</button>
+            <button onclick="location.href='Product.html'">SHOP NOW</button>
             </div>
             </div>
             </div>
