--- a/home.html
+++ b/home.html
@@ -38,10 +38,10 @@
              
     </header>
     <section>
+        <h4 style="text-align: center; margin-top:30px;">DISCOVER YOUR SCENT</h4>
        <div class="image">
         <img src="image/back.png" alt="picture of perfume">
         <img src="image/home.jpg" alt="picture of perfume">
-        <img src="image/icon.jpg" alt="picture of perfume">
         </div>
     </section>
     </div>
