--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
         <!--creating navigation bar-->
         <div class="nav">
             <ul>
-           <li> <a href="Home.html">HOME</a></li>
+           <li> <a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li> <a href="product.html">PRODUCT</a></li>
             </ul>
