--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lala perfumr</title>
-    <link  rel="stylesheet" href="style.css/home.css">
+    <link  rel="stylesheet" href="style.css/index.css">
 </head>
 <body>
      <div class="mobile-wrapper">
